# CUDA-Galaxy

./: CMakeLists.txt  README.md
src/: Body.cpp  Body.h  gl.cpp  gl.h  helpers.cpp  helpers.h  includes.h  kernel.cu  kernel.cuh  main.cu  types.h
